Project ordent_marketplace {
  database_type: 'PostgreSQL'
  Note: '''
    # Ordent Marketplace Database
  '''
}

Table "orders" {
  "id" serial [pk, increment]
  "user_id" int [unique, not null]
  "status" varchar [not null]
  "created_at" timestamptz [not null, default: `now()`]
}

Table "order_items" {
  "order_id" int [not null]
  "product_id" int [not null]
  "quantity" int [not null]
}

Table "products" {
  "id" serial [pk, increment]
  "name" varchar [not null]
  "merchant_id" int [not null]
  "price" int [not null]
  "status" varchar [not null]
  "category_id" int [not null]
  "created_at" timestamptz [not null, default: `now()`]
}

Table "users" {
  "id" serial [pk, increment]
  "full_name" varchar [not null]
  "email" varchar [unique, not null]
  "gender" varchar [not null]
  "date_of_birth" varchar [not null]
  "country_code" int [not null]
  "hashed_password" varchar [not null]
  "password_changed_at" timestamptz [not null, default: `'0001-01-01 00:00:00Z'`]
  "created_at" timestamptz [not null, default: `now()`]
}

Table "sessions" {
  "id" uuid [pk, not null, default: `uuid_generate_v4()`]
  "user_id" int [not null]
  "refresh_token" varchar [not null]
  "user_agent" varchar [not null]
  "client_ip" varchar [not null]
  "is_blocked" boolean [not null, default: false]
  "expires_at" timestamptz [not null]
  "created_at" timestamptz [not null, default: `now()`]
}

Table "merchants" {
  "id" serial [pk, increment]
  "admin_id" int [not null]
  "merchant_name" varchar [not null]
  "country_code" int [not null]
  "created_at" varchar [not null]
}

Table "categories" {
  "id" serial [pk, increment]
  "cat_name" varchar [not null]
  "parent_id" int [not null]
}

Table "countries" {
  "code" serial [pk, increment]
  "name" varchar [not null]
  "continent_name" varchar [not null]
}

Ref:"users"."id" < "orders"."user_id"

Ref:"orders"."id" < "order_items"."order_id"

Ref:"products"."id" < "order_items"."product_id"

Ref:"merchants"."id" < "products"."merchant_id"

Ref:"categories"."id" < "products"."category_id"

Ref:"categories"."id" < "categories"."parent_id"

Ref:"countries"."code" < "users"."country_code"

Ref:"users"."id" < "sessions"."user_id"

Ref:"users"."id" < "merchants"."admin_id"

Ref:"countries"."code" < "merchants"."country_code"
